# gen_ai

./: .gitignore  LLM.py  README.md  app.py  conversations.db  main.py  pyproject.toml
database/: evaluation.py  storage.py
db/: conversations.db  evaluation.db
ingestion/: main.py  porto.md  pyproject.toml
services/: agent.py  evaluation_service.py  pii.py  processing.py
src/: app.py  main.py  pyproject.toml
src/database/: evaluation.py  storage.py
src/db/: conversations.db  evaluation.db
src/db/chroma_db/: chroma.sqlite3
src/services/: agent_service.py  chroma_service.py  evaluation_service.py  pii_service.py  processing.py
src/utils/: patterns.py  prompts.py
tests/: embbed_doc.py  ground_truth.json  ground_truth.py  porto.md
tests/chroma_db/: chroma.sqlite3
utils/: prompts.py
